movie_review_application/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-review-deployment
  namespace: movie-review-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-review
  template:
    metadata:
      labels:
        app: movie-review
    spec:
      containers:
        - name: movie-review
          image: blagica999/movie_review_application:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
