movie_review_application/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-review-service
  namespace: movie-review-namespace
spec:
  selector:
    app: movie-review
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
